# corewar_vm

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  corewar
include/: corewar.h  corewar_config.h  corewar_def.h
include/op/: corewar_op.h  corewar_op_def.h
include/vis/: corewar_vis.h  corewar_vis_color.h  corewar_vis_def.h  corewar_vis_prop.h
includes/: corewar.h  corewar_def.h  corewar_settings.h  vm.h  vm_defines.h  vm_operations.h  vm_settings.h
includes/op/: corewar_op.h  corewar_op_def.h
includes/parse/: corewar_parse.h  corewar_parse_def.h  vm_parse.h  vm_parse_defines.h
includes/vis/: corewar_vis.h  corewar_vis_color.h  corewar_vis_colors.h  corewar_vis_def.h  corewar_vis_prop.h
libft/: Makefile
libft/ft_gnl/includes/: ft_gnl_typedefs.h
libft/ft_printf/includes/: ft_printf.h  ft_printf_defs.h
libft/includes/: libft.h  libft_defs.h
source/: corewar.c  corewar_cycles.c  corewar_exec_carr.c  corewar_utils.c  corewar_vm.c
source/op/: corewar_op.c  corewar_op2.c  corewar_op3.c  corewar_op4.c  corewar_op_utils.c
source/parse/: corewar_parse.c
source/vis/: corewar_vis.c  corewar_vis_handle_utils.c  corewar_vis_init.c  corewar_vis_lock.c  corewar_vis_motion_handle.c  corewar_vis_render_arena.c  corewar_vis_render_mdlb.c  corewar_vis_render_pc.c  corewar_vis_render_pc_msg.c  corewar_vis_render_topb.c  corewar_vis_render_topb2.c  corewar_vis_render_utils.c
sources/: corewar.c  corewar_cycles.c  corewar_utils.c  corewar_vm.c  vm_game.c  vm_game_loop.c  vm_main.c  vm_operations_1to5.c
sources/op/: corewar_op.c  corewar_op2.c  corewar_op3.c  corewar_op4.c  corewar_op_utils.c
sources/parse/: corewar_parse.c  corewar_parse_champion.c  corewar_parse_options.c  vm_parse.c  vm_parse_champion.c  vm_parse_options.c
sources/vis/: corewar_vis.c  corewar_vis_buttons.c  corewar_vis_buttons2.c  corewar_vis_endgame.c  corewar_vis_events.c  corewar_vis_handle_utils.c  corewar_vis_handle_wheel.c  corewar_vis_init.c  corewar_vis_key_handle.c  corewar_vis_lock.c  corewar_vis_mods.c  corewar_vis_mods2.c  corewar_vis_motion_handle.c  corewar_vis_mouse_handle.c  corewar_vis_render_arena.c  corewar_vis_render_btmb.c  corewar_vis_render_button.c  corewar_vis_render_info.c  corewar_vis_render_mdlb.c  corewar_vis_render_menu.c  corewar_vis_render_pc.c  corewar_vis_render_pc_msg.c  corewar_vis_render_processes.c  corewar_vis_render_ps_msg2.c  corewar_vis_render_text.c  corewar_vis_render_topb.c  corewar_vis_render_topb2.c  corewar_vis_render_utils.c  corewar_vis_utils.c
